was able to successfully add the api key

--- a/index.html
+++ b/index.html
@@ -32,33 +32,43 @@
 		</div>
 		<div id="bitcoin" class="tabContent active">
 			<h3>Bitcoin</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="ethereum" class="tabContent">
 			<h3>Ethereum</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="xrp" class="tabContent">
 			<h3>XRP</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="tether" class="tabContent">
 			<h3>Tether</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="bitcoincash" class="tabContent">
 			<h3>Bitcoin Cash</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="litecoin" class="tabContent">
 			<h3>Litecoin</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="binancecoin" class="tabContent">
 			<h3>Binance Coin</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="eos" class="tabContent">
 			<h3>EOS</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="bitcoinsv" class="tabContent">
 			<h3>Bitcoin SV</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 		<div id="stellar" class="tabContent">
 			<h3>Stellar</h3>
+			<h1 class="currentRate"></h1>
 		</div>
 	</div>
 		<script src="main.js"></script>
