was able to successfully retrieve data from the api

--- a/index.html
+++ b/index.html
@@ -17,58 +17,48 @@
 		</nav>
 	</header>
 	<body>
-	<div class="container lg">
+	<div class="container">
 		<div class="tab">
-			<button class="tabLinks" data-coin="bitcoin"><p data-title="bitcoin">Bitcoin</p></button>
-			<button class="tabLinks" data-coin="ethereum"><p data-title="ethereum">Ethereum</p></button>
-			<button class="tabLinks" data-coin="xrp"><p data-title="xrp">XRP</p></button>
-			<button class="tabLinks" data-coin="tether"><p data-title="tether">Tether</p></button>
-			<button class="tabLinks" data-coin="bitcoincash"><p data-title="bitcoincash">Bitcoin Cash</p></button>
-			<button class="tabLinks" data-coin="litecoin"><p data-title="litecoin">Litecoin</p></button>
-			<button class="tabLinks" data-coin="binancecoin"><p data-title="binancecoin">Binance Coin</p></button>
-			<button class="tabLinks" data-coin="eos"><p data-title="eos">EOS</p></button>
-			<button class="tabLinks" data-coin="bitcoinsv"><p data-title="bitcoinsv">Bitcoin SV</p></button>
-			<button class="tabLinks" data-coin="stellar"><p data-title="stellar">Stellar</p></button>
+			<button class="tabLinks active" data-coin="bitcoin"><p data-title="bitcoin">Bitcoin</p></button><!--
+			--><button class="tabLinks" data-coin="ethereum"><p data-title="ethereum">Ethereum</p></button><!--
+			--><button class="tabLinks" data-coin="xrp"><p data-title="xrp">XRP</p></button><!--
+			--><button class="tabLinks" data-coin="tether"><p data-title="tether">Tether</p></button><!--
+			--><button class="tabLinks" data-coin="bitcoincash"><p data-title="bitcoincash">Bitcoin Cash</p></button><!--
+			--><button class="tabLinks" data-coin="litecoin"><p data-title="litecoin">Litecoin</p></button><!--
+			--><button class="tabLinks" data-coin="binancecoin"><p data-title="binancecoin">Binance Coin</p></button><!--
+			--><button class="tabLinks" data-coin="eos"><p data-title="eos">EOS</p></button><!--
+			--><button class="tabLinks" data-coin="bitcoinsv"><p data-title="bitcoinsv">Bitcoin SV</p></button><!--
+			--><button class="tabLinks" data-coin="stellar"><p data-title="stellar">Stellar</p></button>
 		</div>
 		<div id="bitcoin" class="tabContent active">
-			<h3>Bitcoin</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quas at provident quis voluptate iste, velit ab soluta natus perspiciatis a adipisci ut ipsum. Aut laboriosam praesentium fugiat nisi optio!</p>
 		</div>
 		<div id="ethereum" class="tabContent">
-			<h3>Ethereum</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo tempore, doloribus maiores adipisci cumque libero veritatis, architecto voluptates saepe, quibusdam obcaecati. Quod, eaque incidunt labore perspiciatis ab, dignissimos debitis cumque?</p>
 		</div>
 		<div id="xrp" class="tabContent">
-			<h3>XRP</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dolores inventore tempora hic officiis optio impedit quae, fugit, sapiente animi, blanditiis eius! Ad, quae esse! Ullam eligendi tempore, ipsa iure!</p>
 		</div>
 		<div id="tether" class="tabContent">
-			<h3>Tether</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam obcaecati ipsa mollitia autem voluptate odit vel eaque ratione tenetur eum ut harum, eveniet molestiae quo adipisci molestias, cum iusto tempora.</p>
 		</div>
 		<div id="bitcoincash" class="tabContent">
-			<h3>Bitcoin Cash</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque incidunt quae provident commodi animi. Ea facere exercitationem aut rerum itaque tenetur vitae asperiores distinctio nulla dolores unde, at sed non?</p>
 		</div>
 		<div id="litecoin" class="tabContent">
-			<h3>Litecoin</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quaerat, incidunt, assumenda deleniti distinctio nesciunt iste quam enim tempore cumque consectetur omnis obcaecati. Possimus, magnam incidunt eius dolor perspiciatis, beatae!</p>
 		</div>
 		<div id="binancecoin" class="tabContent">
-			<h3>Binance Coin</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt tempore beatae aspernatur incidunt sequi est labore nesciunt, fuga dolorem quas architecto, debitis praesentium ullam, perspiciatis nam ipsum quia corporis. Ab?</p>
 		</div>
 		<div id="eos" class="tabContent">
-			<h3>EOS</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam suscipit numquam, doloribus voluptatibus dolorem sequi, reprehenderit neque eveniet asperiores nobis doloremque velit voluptate, explicabo nemo. Odio numquam cupiditate in tempore!</p>
 		</div>
 		<div id="bitcoinsv" class="tabContent">
-			<h3>Bitcoin SV</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente nesciunt nostrum, distinctio vitae nulla accusamus tenetur expedita reprehenderit corporis illum saepe ad, earum architecto perferendis temporibus quasi? Et, molestias, unde!</p>
 		</div>
 		<div id="stellar" class="tabContent">
-			<h3>Stellar</h3>
-			<h1 class="currentRate"></h1>
+			<p class="main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse deleniti eligendi commodi aliquam eius, unde hic laboriosam ea facere ipsam harum voluptate quae quidem, nisi iusto! Atque nam, repellat aliquid.</p>
 		</div>
 	</div>
 		<script src="main.js"></script>
