made the project responsive

--- a/index.html
+++ b/index.html
@@ -17,40 +17,52 @@
 		</nav>
 	</header>
 	<body>
-	<div class="container">
-		<div class="tab">
-			<button class="tabLinks active" data-coin="BTC"><p data-title="bitcoin">Bitcoin</p></button><!--
-			--><button class="tabLinks" data-coin="ETH"><p data-title="ethereum">Ethereum</p></button><!--
-			--><button class="tabLinks" data-coin="XRP"><p data-title="xrp">XRP</p></button><!--
-			--><button class="tabLinks" data-coin="USDT"><p data-title="tether">Tether</p></button><!--
-			--><button class="tabLinks" data-coin="BCH"><p data-title="bitcoincash">Bitcoin Cash</p></button><!--
-			--><button class="tabLinks" data-coin="LTC"><p data-title="litecoin">Litecoin</p></button><!--
-			--><button class="tabLinks" data-coin="BNB"><p data-title="binancecoin">Binance Coin</p></button><!--
-			--><button class="tabLinks" data-coin="EOS"><p data-title="eos">EOS</p></button><!--
-			--><button class="tabLinks" data-coin="BSV"><p data-title="bitcoinsv">Bitcoin SV</p></button><!--
-			--><button class="tabLinks" data-coin="XLM"><p data-title="stellar">Stellar</p></button>
+		<div class="container">
+			<div class="tab xl">
+				<button class="tabLinks active" data-coin="BTC"><p data-title="bitcoin">Bitcoin</p></button><!--
+				--><button class="tabLinks" data-coin="ETH"><p data-title="ethereum">Ethereum</p></button><!--
+				--><button class="tabLinks" data-coin="XRP"><p data-title="xrp">XRP</p></button><!--
+				--><button class="tabLinks" data-coin="USDT"><p data-title="tether">Tether</p></button><!--
+				--><button class="tabLinks" data-coin="BCH"><p data-title="bitcoincash">Bitcoin Cash</p></button><!--
+				--><button class="tabLinks" data-coin="LTC"><p data-title="litecoin">Litecoin</p></button><!--
+				--><button class="tabLinks" data-coin="BNB"><p data-title="binancecoin">Binance Coin</p></button><!--
+				--><button class="tabLinks" data-coin="EOS"><p data-title="eos">EOS</p></button><!--
+				--><button class="tabLinks" data-coin="BSV"><p data-title="bitcoinsv">Bitcoin SV</p></button><!--
+				--><button class="tabLinks" data-coin="XLM"><p data-title="stellar">Stellar</p></button>
+			</div>
+			<div class="tab lg">
+				<button class="tabLinks active" data-coin="BTC"><p data-title="bitcoin">BTC</p></button><!--
+				--><button class="tabLinks" data-coin="ETH"><p data-title="ethereum">ETH</p></button><!--
+				--><button class="tabLinks" data-coin="XRP"><p data-title="xrp">XRP</p></button><!--
+				--><button class="tabLinks" data-coin="USDT"><p data-title="tether">USDT</p></button><!--
+				--><button class="tabLinks" data-coin="BCH"><p data-title="bitcoincash">BCH</p></button><!--
+				--><button class="tabLinks" data-coin="LTC"><p data-title="litecoin">LTC</p></button><!--
+				--><button class="tabLinks" data-coin="BNB"><p data-title="binancecoin">BNB</p></button><!--
+				--><button class="tabLinks" data-coin="EOS"><p data-title="eos">EOS</p></button><!--
+				--><button class="tabLinks" data-coin="BSV"><p data-title="bitcoinsv">BSV</p></button><!--
+				--><button class="tabLinks" data-coin="XLM"><p data-title="stellar">XLM</p></button>
+			</div>
+			<div id="BTC" class="tabContent xl lg active">
+			</div>
+			<div id="ETH" class="tabContent xl lg">
+			</div>
+			<div id="XRP" class="tabContent xl lg">
+			</div>
+			<div id="USDT" class="tabContent xl lg">
+			</div>
+			<div id="BCH" class="tabContent xl lg">
+			</div>
+			<div id="LTC" class="tabContent xl lg">
+			</div>
+			<div id="BNB" class="tabContent xl lg">
+			</div>
+			<div id="EOS" class="tabContent xl lg">
+			</div>
+			<div id="BSV" class="tabContent xl lg">
+			</div>
+			<div id="XLM" class="tabContent xl lg">
+			</div>
 		</div>
-		<div id="BTC" class="tabContent active">
-		</div>
-		<div id="ETH" class="tabContent">
-		</div>
-		<div id="XRP" class="tabContent">
-		</div>
-		<div id="USDT" class="tabContent">
-		</div>
-		<div id="BCH" class="tabContent">
-		</div>
-		<div id="LTC" class="tabContent">
-		</div>
-		<div id="BNB" class="tabContent">
-		</div>
-		<div id="EOS" class="tabContent">
-		</div>
-		<div id="BSV" class="tabContent">
-		</div>
-		<div id="XLM" class="tabContent">
-		</div>
-	</div>
 		<script src="main.js"></script>
 	</body>
 </html>
