--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>CryptoV 1.0</title>
 	</head>
 	<header>
-		<img src="http://placehold.it/80x80" alt="Placeholder for coin">
+		<img class="logo" src="" alt="Placeholder for coin">
 		<nav>
 			<ul class="navbar">
 				<li class="navbarli"><a href="index.html">Home</a></li>
@@ -17,31 +17,31 @@
 		</nav>
 	</header>
 	<body>
+		<div class="tab xl">
+			<button class="tabLinks active" data-coin="BTC"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="ETH"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="XRP"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="USDT"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="BCH"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="LTC"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="BNB"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="EOS"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="BSV"><p data-title="coinTitle"></p></button><!--
+			--><button class="tabLinks" data-coin="XLM"><p data-title="coinTitle"></p></button>
+		</div>
+		<div class="tab lg">
+			<button class="tabLinks active" data-coin="BTC"><p data-title="bitcoin">BTC</p></button><!--
+			--><button class="tabLinks" data-coin="ETH"><p data-title="ethereum">ETH</p></button><!--
+			--><button class="tabLinks" data-coin="XRP"><p data-title="xrp">XRP</p></button><!--
+			--><button class="tabLinks" data-coin="USDT"><p data-title="tether">USDT</p></button><!--
+			--><button class="tabLinks" data-coin="BCH"><p data-title="bitcoincash">BCH</p></button><!--
+			--><button class="tabLinks" data-coin="LTC"><p data-title="litecoin">LTC</p></button><!--
+			--><button class="tabLinks" data-coin="BNB"><p data-title="binancecoin">BNB</p></button><!--
+			--><button class="tabLinks" data-coin="EOS"><p data-title="eos">EOS</p></button><!--
+			--><button class="tabLinks" data-coin="BSV"><p data-title="bitcoinsv">BSV</p></button><!--
+			--><button class="tabLinks" data-coin="XLM"><p data-title="stellar">XLM</p></button>
+		</div>
 		<div class="container">
-			<div class="tab xl">
-				<button class="tabLinks active" data-coin="BTC"><p data-title="bitcoin">Bitcoin</p></button><!--
-				--><button class="tabLinks" data-coin="ETH"><p data-title="ethereum">Ethereum</p></button><!--
-				--><button class="tabLinks" data-coin="XRP"><p data-title="xrp">XRP</p></button><!--
-				--><button class="tabLinks" data-coin="USDT"><p data-title="tether">Tether</p></button><!--
-				--><button class="tabLinks" data-coin="BCH"><p data-title="bitcoincash">Bitcoin Cash</p></button><!--
-				--><button class="tabLinks" data-coin="LTC"><p data-title="litecoin">Litecoin</p></button><!--
-				--><button class="tabLinks" data-coin="BNB"><p data-title="binancecoin">Binance Coin</p></button><!--
-				--><button class="tabLinks" data-coin="EOS"><p data-title="eos">EOS</p></button><!--
-				--><button class="tabLinks" data-coin="BSV"><p data-title="bitcoinsv">Bitcoin SV</p></button><!--
-				--><button class="tabLinks" data-coin="XLM"><p data-title="stellar">Stellar</p></button>
-			</div>
-			<div class="tab lg">
-				<button class="tabLinks active" data-coin="BTC"><p data-title="bitcoin">BTC</p></button><!--
-				--><button class="tabLinks" data-coin="ETH"><p data-title="ethereum">ETH</p></button><!--
-				--><button class="tabLinks" data-coin="XRP"><p data-title="xrp">XRP</p></button><!--
-				--><button class="tabLinks" data-coin="USDT"><p data-title="tether">USDT</p></button><!--
-				--><button class="tabLinks" data-coin="BCH"><p data-title="bitcoincash">BCH</p></button><!--
-				--><button class="tabLinks" data-coin="LTC"><p data-title="litecoin">LTC</p></button><!--
-				--><button class="tabLinks" data-coin="BNB"><p data-title="binancecoin">BNB</p></button><!--
-				--><button class="tabLinks" data-coin="EOS"><p data-title="eos">EOS</p></button><!--
-				--><button class="tabLinks" data-coin="BSV"><p data-title="bitcoinsv">BSV</p></button><!--
-				--><button class="tabLinks" data-coin="XLM"><p data-title="stellar">XLM</p></button>
-			</div>
 			<div id="BTC" class="tabContent xl lg active">
 			</div>
 			<div id="ETH" class="tabContent xl lg">
